--- a/webapp/templates/attack/tactics.html
+++ b/webapp/templates/attack/tactics.html
@@ -15,7 +15,8 @@
 {% endblock %}
 
 {% block navname %}attack{% endblock %}
-{% block navSon %}tactics{% endblock %}
+{% block navSon %}information{% endblock %}
+{% block navDeep %}tactics{% endblock %}
 
 {% block content %}
      <div class="content-wrapper" style="margin-left: 0px;">
@@ -278,6 +279,7 @@
 <script src="/static/js/jquery.form.js"></script>
 <script src="/static/js/bootstrap-growl.js"></script>
 <script>
+    //新建
     $("#attackForm").ajaxForm({
         type: "post",
         url: "/attack/tactics/data/create/",    //提交到的url
@@ -296,6 +298,7 @@
 </script>
 //datatables
 <script>
+    // 点击详情时的数据
     function format(d) {
         //详情
         return (
@@ -350,7 +353,7 @@
         "autoWidth": false,
         "info": true,
         "dom": 'Bfrtip',
-        "buttons": ["copy", "csv", "excel", "pdf", "print", "colvis"],
+        "buttons": ["copy", "csv", "excel", "pdf", "print", "colvis"], // 导出的数据格式
         "pageLength": 15,//每页显示数据
         "bProcessing": true, //显示数据加载中\
         "createdRow": function( row, data, dataIndex ) {
@@ -394,14 +397,17 @@
                 "data": null,
                 "defaultContent": '<a class="btn btn-info btn-sm" href="#"> <i class="fas"> </i>查看 </a>',
             },
+            // 操作相关
             {"data": null, "sClass": "center",
                         "fnCreatedCell": function (nTd, sData, oData, iRow, iCol) {
                             var element = $(nTd).empty();
                             var edit = $('<a href="javascript:;" class="btn btn-info btn-sm" data-toggle="modal" data-target="#myModal2" style="margin-right: 10px"> <i class="fas fa-pencil-alt"> </i>修改 </a>');
                             var remove = $('<a href="javascript:;" class="btn btn-danger btn-sm remove111"> <i class="fas fa-trash"> </i>删除 </a>');
 
+                            // 添加相关的操作到页面
                             element.append(edit);
                             element.append(remove);
+                            // 相关操作的触发
                             remove.on('click', function () {
                                 var $tr = $(this).parents('tr');
                                 var con = confirm("确定删除？");
@@ -448,7 +454,7 @@
                     }
         ],
     });
-    // Add event listener for opening and closing details
+    // 详情触发
     $('#example tbody').on('click', 'td.dt-control', function () {
         var tr = $(this).closest('tr');
         var row = table.row(tr);
